CHANGELOG RoundCube Webmail
---------------------------

2009/01/18 (alec)
----------
- Fix problems with backslash as IMAP hierarchy delimiter (#1484467)
- Secure vcard export by getting rid of preg's 'e' modifier use (#1485689)
- Fix authentication when submitting form with existing session (#1485679)

2009/01/15 (alec)
----------
- Allow absolute URLs to images in HTML messages/sigs (#1485666)
- Fix message body which contains both inline attachments and emotions
- Fix SQL query execution errors handling in rcube_mdb2 class (#1485509)
- Fix address names with '@' sign handling (#1485654)

2009/01/08 (alec)
----------
- Improve messages display performance
- Fix messages searching with 'to:' modifier

2008/12/30 (thomasb)
----------
- Fix mark popup in IE 7 (#1485369)
- Fix line-break issue when copy & paste in Firefox (#1485425)

2008/12/18 (thomasb)
----------
- Only abbreviate attachment file names in MSIE < 7
- Fix autocomplete "unknown server error" (#1485637)
- Optimize autocomplete search and output

2008/12/18 (alec)
----------
- Fix STARTTLS before AUTH in SMTP connection (#1484883)
- Support multiple quota values in QUOTAROOT resonse (#1485626)

2008/12/16 (thomasb)
----------
- Only abbreviate file name for IE browsers (#1485063)

2008/12/11 (alec)
----------
- Performance: allow setting imap rootdir and delimiter before connect (#1485172)

2008/12/06 (alec)
----------
- Fix sorting of folders with more than 2 levels (#1485569)
- Fix search results page jumps in LDAP addressbook (#1485253)
- Fix empty line before the signature in IE (#1485351)
- Fix horizontal scrollbar in preview pane on IE (#1484633)
- Add Robots meta tag in login page and installer (#1484846)

2008/12/04 (alec)
----------
- Added 'show_images' option, removed 'addrbook_show_images' (#1485597)
- Performance fix: some mail actions do not require imap connection

2008/11/28 (thomasb)
----------
- Option to check for new mails in all folders (#1484374)